--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,22 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/werhouse
+    url: jdbc:postgresql://localhost:5432/wer
     username: postgres
     password: user
   # JPA properties
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.PostgresSQLDialect
 
     hibernate:
-      ddl-auto: update # When you launch the application for the first time - switch "none" at "create"
+      ddl-auto: create
+      # When you launch the application for the first time - switch "none" at "create"
+
     show-sql: true
     database: postgresql
     open-in-view: false
     generate-ddl: true
+
   hikari:
     maximum-pool-size: 10
   application:
